# Connect

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists_old.txt  CMakePresets.json  clion_gen.cmake  generate_qrc.py  main.cpp  records.json  resources.json  resources.qrc  resources.qrc.bak  structure.txt  test_prog.cmake
CMake/: Qt-common.cmake  Qt-import-dlls.cmake  common.cmake  unit_test.cmake  vcpkg-common.cmake
Contracts/: IFileService.cpp  IFileService.hpp  ISerializer.hpp
Helpers/: Actions.hpp  Animation.cpp  Animation.hpp  ButtonComparator.hpp  NotImplementedException.cpp  NotImplementedException.hpp  Parser.cpp  Parser.hpp  RankComparator.hpp  RecordComparator.hpp  RecordHash.hpp  RecordSerializer.hpp  ResourcesSerializer.hpp  Sound.cpp  Sound.hpp  generate_qrc.py
Models/: Block.cpp  Block.hpp  BlockButton.cpp  BlockButton.hpp  Point.cpp  Point.hpp  Record.hpp
Resources/: Qt6Class.drawio  proj.md  records.json
Resources/records/: records.json
Services/: Animation.hpp  Blocks.cpp  Blocks.hpp  Records.cpp  Records.hpp  Sound.cpp  Sound.hpp
Test/: test.cpp
ViewModels/: about.cpp  about.hpp  about.ui  addrecorddialog.cpp  addrecorddialog.hpp  addrecorddialog.ui  blockswidget.cpp  blockswidget.hpp  blockswidget.ui  game.cpp  game.hpp  gamewidget.cpp  gamewidget.hpp  gamewidget.ui  leaderboard.cpp  leaderboard.hpp  leaderboardwidget.cpp  leaderboardwidget.hpp  leaderboardwidget.ui  menu.cpp  menu.hpp  menu.ui  pastgamewidget.cpp  pastgamewidget.hpp  pastgamewidget.ui  statuswidget.cpp  statuswidget.hpp  statuswidget.ui
Views/: about.cpp  about.hpp  about.ui  game.cpp  game.hpp  leaderboard.cpp  leaderboard.hpp  leaderboard.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  menu.cpp  menu.hpp  menu.ui
include/: Block.hpp  Blocks.hpp  NotImplementedException.hpp  Point.hpp  config.hpp  details.hpp  game.hpp  mainwindow.hpp  menu.hpp
pch/: absl.log.hh  absl.status.hh  fmt.hh  qCore.hh  qWidgets.hh  qt.gui.hh  qt.multimedia.hh  qt.xml.hh  std.algorithm.hh  std.concurrency.hh  std.container.hh  std.dynamic.hh  std.error.hh  std.io.hh  std.string.hh  std.time.hh  std.utils.hh
src/: game.cpp  game.hpp  game.ui  main.cpp  mainmenu.cpp  mainmenu.hpp  mainmenu.ui  mainwindow.cpp  mainwindow.hpp  menu.cpp  menu.hpp  menu.ui
test/: test.cpp  textedit.cpp  textedit.hpp  textedit.ui
